--- a/config_deepspeech.yaml
+++ b/config_deepspeech.yaml
@@ -1,4 +1,2 @@
-model: ./deepspeech-0.5.1-models/output_graph.pb
-alphabet: ./deepspeech-0.5.1-models/alphabet.txt
-lm: ./deepspeech-0.5.1-models/lm.binary 
-trie: ./deepspeech-0.5.1-models/trie
+model: ./deepspeech-0.8.2-models/deepspeech-0.8.2-models.pbmm
+scorer: ./deepspeech-0.8.2-models/deepspeech-0.8.2-models.scorer
