--- a/env/requirements.txt
+++ b/env/requirements.txt
@@ -3,12 +3,16 @@ Click==7.0
 colorama==0.4.4
 cursor==1.3.4
 decorator==4.4.2
+Flask==1.1.2
 halo==0.0.28
 ipdb==0.12.2
 ipython==7.19.0
 ipython-genutils==0.2.0
+itsdangerous==1.1.0
 jedi==0.17.2
+Jinja2==2.11.2
 log-symbols==0.0.14
+MarkupSafe==1.1.1
 nptyping==0.3.1
 numpy==1.19.4
 parso==0.7.1
@@ -17,7 +21,9 @@ pickleshare==0.7.5
 prompt-toolkit==3.0.8
 ptyprocess==0.6.0
 PyAudio==0.2.11
+pycairo==1.20.0
 Pygments==2.7.2
+PyGObject==3.38.0
 pynput==1.4.5
 pyperclip==1.7.0
 python-xlib==0.28
@@ -31,3 +37,4 @@ Wave==0.0.2
 wcwidth==0.2.5
 webrtcvad==2.0.10
 websockets==8.1
+Werkzeug==1.0.1
