--- a/backend/replace_patterns.yml
+++ b/backend/replace_patterns.yml
@@ -26,3 +26,15 @@
 ". ": "."
 " colon": ":"
 "colon": ":"
+"january": "January"
+"february": "February"
+"march": "March"
+"april": "April"
+"may": "May"
+"june": "June"
+"july": "July"
+"august": "August"
+"september": "September"
+"october": "October"
+"november": "November"
+"december": "December"
