--- a/backend/replace_patterns.yml
+++ b/backend/replace_patterns.yml
@@ -8,6 +8,7 @@
 "back slider": "`"
 # note: these were meant for use in confluence, but doesn't actually work as desired. It seems like you have to have some delay while typing in order to get the braces to actually turn into the proper markup. FFS atlassian!
 "open braces ": "{{"
+"open braces": "{{"
 " close braces": "}}"
 " closed braces": "}}"
 "close braces": "}}"
