--- a/backend/replace_patterns.yml
+++ b/backend/replace_patterns.yml
@@ -38,9 +38,13 @@
 # "colon": ":"
 "january": "January"
 "february": "February"
-"march": "March"
+"march ": "March "
+"march,": "March,"
+"march.": "March."
 "april": "April"
-"may": "May"
+"may ": "May "
+"may,": "May,"
+"may.": "May."
 "june": "June"
 "july": "July"
 "august": "August"
