--- a/backend/replace_patterns.yml
+++ b/backend/replace_patterns.yml
@@ -22,6 +22,10 @@
 "equals sign": "="
 "equal sign": "="
 "death": "def"
+" underscored ": "_"
+"underscored": "_"
+" under score ": "_"
+"under score": "_"
 " underscore ": "_"
 "underscore": "_"
 " spacebar ": " "
@@ -53,3 +57,4 @@
 "november": "November"
 "december": "December"
 "date-time": "datetime"
+"deaf ": "def "
