adding better handling for pre pending white space when a command is in the middle of a bunch of dictated text, and adding some replace patterns

--- a/backend/commands.yml
+++ b/backend/commands.yml
@@ -18,10 +18,19 @@
   command_type: keystroke
   kwargs:
     keys: ["super+tab"]
+- name: page down
+  command_type: keystroke
+  kwargs:
+    keys: ["page_down"]
+- name: page up
+  command_type: keystroke
+  kwargs:
+    keys: ["page_up"]
 - name: pasta
   command_type: keystroke
   kwargs:
     keys: ["ctrl+v"]
+    prepend_whitespace_when_embedded: true
     # undo_keys: ["ctrl+z"]
 - name: blue
   command_type: keystroke
@@ -202,3 +211,8 @@
 - name: undo last
   command_type: undo_utterance
   kwargs: {}
+- name: my email address
+  aliases: ["my email"]
+  command_type: type
+  kwargs:
+    content: "kitkennedy8@gmail.com"
