--- a/backend/replace_patterns.yml
+++ b/backend/replace_patterns.yml
@@ -27,6 +27,12 @@
 "open sesame": "("
 "close sesame": ")"
 "opensesame": "("
+" open bracket ": "["
+" open bracket": "["
+"open bracket": "["
+" close bracket ": "["
+" close bracket": "["
+"close bracket": "["
 # =
 "equals sign": "="
 "equal sign": "="
