--- a/backend/replace_patterns.yml
+++ b/backend/replace_patterns.yml
@@ -19,9 +19,11 @@
 "open braces ": "{{"
 "open braces": "{{"
 " close braces": "}}"
-" closed braces": "}}"
 "close braces": "}}"
+" closed braces": "}}"
 "closed braces": "}}"
+" cuz braces": "}}"
+"cuz braces": "}}"
 # ( 
 "open perenne": "("
 "open sesame": "("
@@ -30,9 +32,15 @@
 " open bracket ": "["
 " open bracket": "["
 "open bracket": "["
-" close bracket ": "["
-" close bracket": "["
-"close bracket": "["
+" close bracket ": "]"
+" close bracket": "]"
+"close bracket": "]"
+" open brace ": "{"
+" open brace": "{"
+"open brace": "{"
+" close brace ": "}"
+" close brace": "}"
+"close brace": "}"
 # =
 "equals sign": "="
 "equal sign": "="
@@ -59,6 +67,8 @@
 ". ": "."
 " colony": ":"
 "colony": ":"
+" colonnade": ":"
+"colonnade": ":"
 # " colon": ":"
 # "colon": ":"
 # "colon": ":"
@@ -78,6 +88,13 @@
 "october": "October"
 "november": "November"
 "december": "December"
+"monday": "Monday"
+"tuesday": "Tuesday"
+"wednesday": "Wednesday"
+"thursday": "Thursday"
+"friday": "Friday"
+"saturday": "Saturday"
+"sunday": "Sunday"
 "date-time": "datetime"
 "deaf ": "def "
 "back-end": backend
