some small updates, including some test code

--- a/backend/replace_patterns.yml
+++ b/backend/replace_patterns.yml
@@ -110,5 +110,6 @@
 "dash": "-"
 "cadmium": "CAD"
 "ai to": "ai2"
-" comma ": ", "
+# use "chameleon" for comma
+" chameleon": "," 
 "question mark": "?"
