--- a/env/requirements.txt
+++ b/env/requirements.txt
@@ -3,14 +3,14 @@ Click==7.0
 colorama==0.4.4
 cursor==1.3.4
 decorator==4.4.2
-Flask==1.1.2
+Flask==3.1.0
 halo==0.0.28
-ipdb==0.12.2
+
 itsdangerous==1.1.0
 jedi==0.17.2
 Jinja2==2.11.2
 log-symbols==0.0.14
-MarkupSafe==1.1.1
+MarkupSafe==3.0.2
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -19,7 +19,7 @@ ptyprocess==0.6.0
 # pycairo==1.20.0
 # Pygments==2.7.2
 # PyGObject==3.38.0
-pynput==1.7.3
+pynput==1.7.7
 pyperclip==1.7.0
 python-xlib==0.28
 PyYAML==5.1.2
@@ -31,7 +31,7 @@ termcolor==1.1.0
 Wave==0.0.2
 wcwidth==0.2.5
 webrtcvad==2.0.10
-# websockets
+websockets==14.1
 # pathlib
-# Werkzeug==1.0.1
-PyQt5==5.15.4
+Werkzeug==3.1.3
+PyQt5==5.15.11
